@@ -57,7 +57,7 @@ Plugin 'terryma/vim-multiple-cursors'
 Plugin 'uguu-org/vim-matrix-screensaver'
 Plugin 'Valloric/ListToggle'
 Plugin 'Valloric/MatchTagAlways'
-"Plugin 'Valloric/YouCompleteMe'
+Plugin 'Valloric/YouCompleteMe'
 Plugin 'vim-perl/vim-perl'
 Plugin 'vim-scripts/Align'
 Plugin 'vim-scripts/a.vim'
